<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e9f7ef"
    android:orientation="vertical" >

    <include layout="@layout/setting_head" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dip" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:layout_marginTop="15dip"
            android:background="@drawable/register_image2"
            android:padding="10dip" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/register_address"
                        android:textColor="#444444"
                        android:textSize="@dimen/text_size_small" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="60dip"
                        android:background="@drawable/bg_title_bar_btn"
                        android:hint="@string/hint_address"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:textColor="#ff333333"
                        android:textColorHint="#c4d6cc"
                        android:textSize="@dimen/text_size_micro" />
                </FrameLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:src="@drawable/register_line1" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="14dip"
                        android:text="@string/register_verify"
                        android:textColor="#444444"
                        android:textSize="@dimen/text_size_small" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="60dip"
                        android:background="@drawable/bg_title_bar_btn"
                        android:hint="@string/hint_verify_info"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textColor="#ff333333"
                        android:textColorHint="#c4d6cc"
                        android:textSize="@dimen/text_size_micro" />
                </FrameLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/register_line1" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/register_name"
                        android:textColor="#444444"
                        android:textSize="@dimen/text_size_small" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="60dip"
                        android:background="@drawable/bg_title_bar_btn"
                        android:hint="@string/hint_name"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textColor="#ff333333"
                        android:textColorHint="#c4d6cc"
                        android:textSize="@dimen/text_size_micro" />
                </FrameLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/register_line1" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/register_password"
                        android:textColor="#444444"
                        android:textSize="@dimen/text_size_small" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="60dip"
                        android:background="@drawable/bg_title_bar_btn"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:maxLength="16"
                        android:singleLine="true"
                        android:textColor="#ff333333"
                        android:textColorHint="#c4d6cc"
                        android:textSize="@dimen/text_size_micro" />
                </FrameLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/register_line1" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/re_register_password"
                        android:textColor="#444444"
                        android:textSize="@dimen/text_size_small" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="60dip"
                        android:background="@drawable/bg_title_bar_btn"
                        android:hint="@string/hint_re_password"
                        android:inputType="textPassword"
                        android:maxLength="16"
                        android:singleLine="true"
                        android:textColor="#ff333333"
                        android:textColorHint="#c4d6cc"
                        android:textSize="@dimen/text_size_micro" />
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="80dip"
                    android:layout_height="80dip"
                    android:layout_marginTop="40dip"
                    android:background="@drawable/image_photo"
                    android:gravity="center" >

                    <ImageView
                        android:id="@+id/image_camera"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:contentDescription="@null"
                        android:src="@drawable/camera"
                        android:visibility="visible" />
                </LinearLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/bg_title_bar_btn"
                    android:text="@string/submit_photo"
                    android:textColor="#696969"
                    android:textSize="@dimen/text_size_small" />
            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/register_instruction"
            android:textColor="#444444"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_instruction_info"
            android:textColor="#444444"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_instruction_info1"
            android:textColor="#444444"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_instruction_info2"
            android:textColor="#444444"
            android:textSize="@dimen/text_size_small" />
    </LinearLayout>

</LinearLayout>