<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
    android:orientation="vertical" >

    <include layout="@layout/setting_head" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0.00"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/settings_userId" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="text"
                android:textSize="@dimen/text_size_small" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0.00"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/settings_newpwd" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/settings_newpwdtip"
                android:inputType="textPassword"
                android:textSize="@dimen/text_size_small" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0.00"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/settings_confirmnewpwd" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/settings_confirmnewpwdtip"
                android:inputType="textPassword"
                android:textSize="@dimen/text_size_small" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>