<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_content_bg"
        android:padding="6.0dip"
        android:text="@string/alert_confirm_delete_all_cached_images"
        android:textSize="@dimen/text_size_big2" />

    <View
        android:layout_width="match_parent"
        android:layout_height="5dip"
        android:background="@android:color/transparent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8.0dip"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/cancel"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_margin="2dip"
            android:layout_weight="1"
            android:background="@drawable/dialog_bn_bg_selector"
            android:gravity="center"
            android:text="@string/alert_dialog_cancel"
            android:textColor="@color/dialog_text_selector"
            android:textSize="@dimen/text_size_normal" />

        <Button
            android:id="@+id/ok"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_margin="2dip"
            android:layout_weight="1"
            android:background="@drawable/dialog_bn_bg_selector"
            android:gravity="center"
            android:text="@string/alert_dialog_ok"
            android:textColor="@color/dialog_text_selector"
            android:textSize="@dimen/text_size_normal" />
    </LinearLayout>

</LinearLayout>