<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6.0dip"
        android:layout_marginRight="6.0dip"
        android:background="@drawable/dialog_content_bg"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_by_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_content_bg"
            android:gravity="center"
            android:padding="6.0dip"
            android:text="@string/pize"
            android:textSize="@dimen/text_size_big2" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tv_by_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="6.0dip"
            android:text="@string/location_picture"
            android:textSize="@dimen/text_size_big2" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dip"
        android:background="@android:color/transparent" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6.0dip"
        android:background="@drawable/dialog_bn_bg_selector"
        android:gravity="center"
        android:text="@string/alert_dialog_cancel"
        android:textColor="@color/dialog_text_selector"
        android:textSize="@dimen/text_size_normal" />

</LinearLayout>